square highlighting and seelecting test

--- a/dev/test.ipynb
+++ b/dev/test.ipynb
@@ -158,6 +158,15 @@
    "source": [
     "chess.svg.board(board=board, arrows=[(chess.G1, chess.F3)], size=400, lastmove=board.peek())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chess.svg.board(board=board, lastmove=board.peek() if board.move_stack else None, size=500)"
+   ]
   }
  ],
  "metadata": {
