--- a/legacy/func backups.ipynb
+++ b/legacy/func backups.ipynb
@@ -125,6 +125,67 @@
     "\n",
     "        self.update_board()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    # def init_ui(self):\n",
+    "    #     # Set window title and geometry\n",
+    "    #     self.setWindowTitle('JaskFish')\n",
+    "    #     self.setGeometry(100, 100, 400, 480)\n",
+    "\n",
+    "    #     # Create main widget and set layout\n",
+    "    #     central_widget = QWidget(self)\n",
+    "    #     self.setCentralWidget(central_widget)\n",
+    "    #     main_layout = QVBoxLayout()\n",
+    "    #     central_widget.setLayout(main_layout)\n",
+    "\n",
+    "    #     # Create turn indicator label\n",
+    "    #     self.turn_indicator = QLabel(\"White's turn\" if self.board.turn == chess.WHITE else \"Black's turn\")\n",
+    "    #     self.turn_indicator.setAlignment(Qt.AlignCenter)\n",
+    "    #     self.turn_indicator.setFont(QFont('Arial', 16))\n",
+    "    #     main_layout.addWidget(self.turn_indicator)\n",
+    "\n",
+    "    #     # Create board widget and grid layout\n",
+    "    #     board_widget = QWidget()\n",
+    "    #     grid_layout = QGridLayout()\n",
+    "    #     board_widget.setLayout(grid_layout)\n",
+    "    #     main_layout.addWidget(board_widget)\n",
+    "\n",
+    "    #     # Create squares and add them to the grid layout\n",
+    "    #     self.squares = {}\n",
+    "    #     for row in range(8):\n",
+    "    #         for col in range(8):\n",
+    "    #             button = QPushButton()  # Create button\n",
+    "    #             button.setFixedSize(QSize(50, 50))  # Set button size\n",
+    "    #             button.setFont(QFont('Arial', 20))  # Set button font\n",
+    "    #             button.clicked.connect(self.on_square_clicked)  # Connect button click event\n",
+    "    #             grid_layout.addWidget(button, 7 - row, col)  # Standard board orientation\n",
+    "    #             self.squares[chess.square(col, row)] = button  # Store button in dictionary\n",
+    "    #             # if self.player_is_white:\n",
+    "    #             #     grid_layout.addWidget(button, 7 - row, col)\n",
+    "    #             # else:\n",
+    "    #             #     grid_layout.addWidget(button, row, 7 - col)  # Flip the board for Black\n",
+    "    #             # self.squares[chess.square(col, row)] = button\n",
+    "\n",
+    "    #     # Create restart button and connect click event\n",
+    "    #     restart_button = QPushButton(\"Restart\")\n",
+    "    #     restart_button.clicked.connect(self.restart_game)\n",
+    "    #     main_layout.addWidget(restart_button)\n",
+    "        \n",
+    "    #     undo_button = QPushButton(\"Undo\")\n",
+    "    #     undo_button.clicked.connect(self.undo_move)\n",
+    "    #     main_layout.addWidget(undo_button)\n",
+    "\n",
+    "    #     # Update board and center window on screen\n",
+    "    #     self.update_board()\n",
+    "    #     self.center_on_screen()\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
